fixed gaps and updated description

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,9 +1,9 @@
 p {
   text-align: justify;
+  font-style: italic;
 }
 h2 {
-  padding-top: 40px;
-  padding-bottom: 20px;
+  padding: 20px 0;
   font-size: 1.5rem;
   font-weight: 750;
 }
